[package]
name = "dystopia"
version = "0.1.1"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Things aren't as they seem"
repository = "https://github.com/phR0ze/dystopia"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher
strip = true    # Remove all extra info

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
